# trading-framework

./: .gitignore  LICENSE
backtest-rs/: Cargo.toml
data-rs/: Cargo.toml
trading_gateway/: Cargo.toml
trading_gateway/server/: Cargo.toml
trading_gateway/server/src/: lib.rs  monitor.rs
trading_gateway/server/src/exchange_proxy/: mod.rs
trading_gateway/server/src/exchange_proxy/exchanges/: mod.rs
trading_gateway/shared/: Cargo.toml
trading_gateway/shared/src/: errors.rs  ipc.rs  label.rs  lib.rs  local_order.rs  local_stop_order.rs  local_trade.rs  order.rs  push.rs  request.rs  response.rs  types.rs
trading_gateway/shared/src/instrument/: binance.rs  ftx.rs  mod.rs
