[package]
edition = "2018"
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["rkyv"]}
derive_more = "0.99"
fehler = "1"
ftx = "0.5"
once_cell = "1"
prometheus = "0.13"
rand = "0.8"
regex = "1"
rkyv = "0.7"
rust_decimal = {git = "https://github.com/dovahcrow/rust-decimal", features = ["rkyv"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["time"]}
uuid = {version = "1", features = ["v4", "serde"]}
zmq = "0.9"
